force-app/main/default/objects/Contact/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Customer&apos;s product</description>
    <label>Product</label>
    <length>40</length>
    <type>Text</type>
</CustomField>